--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,24 @@
 body {
-  background-color: #d8d8d8;
+  background-color: #9ec7d4;
 }
 
 .App {
   text-align: center;
 }
 
+.heading {
+  color: white;
+  text-shadow: 1px 1px 1px #555;
+}
+
 .wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .container {
-  flex: 1;
-  width: 300px;
+  width: 200px;
   padding: 3%;
   margin: 3%;
   border-radius: 2%;
@@ -38,9 +43,14 @@ input {
 button {
   margin-top: 50px;
   padding: 5%;
-  background: #083543;
+  background-color: #083543;
   border: none;
   color: white;
+  transition: background-color 1s;
+}
+
+button:hover {
+  background-color: #054f66;
 }
 
 .show {
